test/fail/functionwrongargs.app
//No function or page

application test

section datamodel


  function getA(i : Int) : String {
    return "a";
  }
  
  function useA() {
    getA("Fiets");
  }

